[project]
name = "comfyui_mx_post_processing-nodes"
description = "A collection of post processing nodes for ComfyUI, dds image post-processing adjustment capabilities to the ComfyUI."
version = "1.0.0"
license = "LICENSE"
dependencies = ["torch", "torchvision", "numpy", "Pillow", "color-matcher", "opencv-python"]

[project.urls]
Repository = "https://github.com/Intersection98/ComfyUI_MX_post_processing-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_MX_post_processing-nodes"
Icon = ""
